--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,23 +1,18 @@
-<ion-content>
-  <div class="background">
-
-    <div class="logo">
-      <ion-icon name="person-circle-outline"></ion-icon>
-    </div>
-    <ion-item >
-      <ion-label color="light">login</ion-label>
-      <ion-input  color="light" type="mail" placeholder="Adresse email"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label color="light">Mot de passe</ion-label>
-      <ion-input color="light" type="password" placeholder="Mot de passe"></ion-input>
-    </ion-item>
+<ion-header>
+  <ion-navbar>
     <ion-item lines="none">
-      <ion-button color="light" slot="end" fill="clear">Mot de passe oublié ?</ion-button>
+      <ion-button color="light" slot="start" fill="clear">Acceuil</ion-button>
     </ion-item>
-    <ion-button color="light" expand="block" shape="round" fill="outline">Connexion</ion-button>
-<br>
-<ion-button color="light" expand="block" shape="round">Inscription</ion-button>
-  </div>
-</ion-content>
+    
+    <ion-item lines="none">
+      <ion-button color="light" slot="end" fill="clear">log in</ion-button>
+    </ion-item>
+  </ion-navbar>
+</ion-header>
+
+<ion-footer collapse="fade">
+  <ion-toolbar>
+    <ion-title>Copyrigt TFJ</ion-title>
+  </ion-toolbar>
+</ion-footer>
 
