--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,19 +1,8 @@
-ion-content{
-  --ion-background-color: var(--ion-color-secondary) 
+ion-header{
+  --ion-background-color:#FC7D41;
 }
-.background{
-    position: absolute;
-    top:10%; 
-}
-.logo{
-  position: relative;
-  height: 100px;
-}
-.logo ion-icon{
-  font-size: 5em;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+ion-footer{
+  --ion-background-color:#FC7D41;
 }
 
