--- a/src/app/home/login/login.page.html
+++ b/src/app/home/login/login.page.html
@@ -1,23 +1,48 @@
-<ion-content>
-  <div class="background">
-
-    <div class="logo">
-      <ion-icon name="person-circle-outline"></ion-icon>
-    </div>
+<ion-header>
+  <ion-navbar class="ion-margin-bottom">
     <ion-item >
-      <ion-label color="light">login</ion-label>
-      <ion-input  color="light" type="mail" placeholder="Adresse email"></ion-input>
+      <ion-button color="light" slot="start" fill="clear" ></ion-button>
     </ion-item>
-    <ion-item>
-      <ion-label color="light">Mot de passe</ion-label>
-      <ion-input color="light" type="password" placeholder="Mot de passe"></ion-input>
-    </ion-item>
-    <ion-item lines="none">
-      <ion-button color="light" slot="end" fill="clear">Mot de passe oublié ?</ion-button>
-    </ion-item>
-    <ion-button color="light" expand="block" shape="round" fill="outline">Connexion</ion-button>
-<br>
-<ion-button color="light" expand="block" shape="round">Inscription</ion-button>
-  </div>
+  </ion-navbar>
+</ion-header>
+<ion-content>
+  <ion-text color="primary">
+    <div class="background">
+      <div class="logo">
+        <ion-icon name="person-circle-outline"></ion-icon>
+      </div>
+      <ion-item >
+        <ion-label  color="primary">login</ion-label>
+        <ion-input  color="light" type="mail" placeholder="Adresse email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label color="primary">Mot de passe</ion-label>
+        <ion-input color="light" type="password" placeholder="Mot de passe"></ion-input>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-button color="primary" slot="end" fill="clear">Mot de passe oublié ?</ion-button>
+      </ion-item>
+     <ion-item routerLink="/listing-page">
+        <ion-button  line="none" color="primary"  shape="round" fill="outline" slot="end">Connexion</ion-button>
+     </ion-item> 
+    </div>
+  </ion-text>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="home"> 
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Accueil</ion-label>
+        <ion-badge>6</ion-badge>
+      </ion-tab-button>
+  <ion-tab-button tab="people">
+        <ion-icon name="people"></ion-icon>
+        <ion-label>Employés</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="speakers">
+        <ion-icon name="person-circle"></ion-icon>
+        <ion-label>Profil</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-content>
 
