--- a/src/app/home/login/login.page.scss
+++ b/src/app/home/login/login.page.scss
@@ -1,6 +1,7 @@
-ion-content{
-    --ion-background-color: var(--ion-color-secondary) 
-  }
+
+  ion-header{
+    --ion-background-color: linear-gradient( 0.25turn,#4854e0, #4c8dff);
+ }
   .background{
       position: absolute;
       top:10%; 
@@ -16,3 +17,4 @@ ion-content{
     left: 50%;
     transform: translate(-50%, -50%);
   }
+ 
