--- a/src/app/home/listing-page/listing-page.page.html
+++ b/src/app/home/listing-page/listing-page.page.html
@@ -1,30 +1,72 @@
 <ion-header>
   <ion-navbar class="ion-margin-bottom">
     <ion-item >
-      <ion-button color="light" slot="start" fill="clear" ></ion-button>
+      <ion-button color="light" slot="start" fill="clear" > Employees</ion-button>
     </ion-item>
   </ion-navbar>
 </ion-header>
 <ion-content>
-    <div class="searchbar"><br>
-      <ion-item routeLink="/home">
-        <ion-searchbar color="danger"></ion-searchbar>
-        <ion-button color="white" expand="block" shape="round" fill="outline">Sign out</ion-button>
-      </ion-item>
-    </div>
-    <ion-button color="white" expand="block" shape="round" fill="outline">Sign out</ion-button>
-    <ion-button color="white" expand="block" shape="round" fill="outline">Sign out</ion-button>
-    <ion-button color="white" expand="block" shape="round" fill="outline">Sign out</ion-button>
+  <!-- List of Text Items -->
+  <ion-item>
+    <ion-button slot="end" color="white" expand="block" shape="round" fill="outline" (click)="presentAlert(this)">Add</ion-button>
+  </ion-item>
+<ion-list *ngFor ="let employe of employes" >
+  <ion-item>
+    <ion-icon  slot="start" name="person-circle-outline"></ion-icon>
+    <ion-label>
+      <h2>{{employe?.firstname}} {{employe?.lastname}}</h2>
+      <h3>valided : {{employe?.validated}}</h3>
+      <p> material : {{employe?.materialAssigned[0].name}}</p>
+    </ion-label>
+     <ion-icon  slot="end" name="ellipsis-vertical"></ion-icon>
+  </ion-item>
+</ion-list>
+<ion-list *ngFor ="let employe of employes" >
+  <ion-item>
+    <ion-icon  slot="start" name="person-circle-outline"></ion-icon>
+    <ion-label>
+      <h2>{{employe?.firstname}} {{employe?.lastname}}</h2>
+      <h3>valided : {{employe?.validated}}</h3>
+      <h3>email : {{employe?.email}}</h3>
+      <p> material : {{employe?.materialAssigned[0].name}}</p>
+    </ion-label>
+     <ion-icon  slot="end" name="ellipsis-vertical"></ion-icon>
+  </ion-item>
+</ion-list>
+<ion-list *ngFor ="let employe of employes" >
+  <ion-item>
+    <ion-icon  slot="start" name="person-circle-outline"></ion-icon>
+    <ion-label>
+      <h2>{{employe?.firstname}} {{employe?.lastname}}</h2>
+      <h3>valided : {{employe?.validated}}</h3>
+      <h3>email : {{employe?.email}}</h3>
+      <p> material : {{employe?.materialAssigned[0].state}}</p>
+    </ion-label>
+     <ion-icon  slot="end" name="ellipsis-vertical"></ion-icon>
+  </ion-item>
+</ion-list>
+<ion-list *ngFor ="let employe of employes" >
+  <ion-item>
+    <ion-icon  slot="start" name="person-circle-outline"></ion-icon>
+    <ion-label>
+      <h2>{{employe?.firstname}} {{employe?.lastname}}</h2>
+      <h3>valided : {{employe?.validated}}</h3>
+      <h3>email : {{employe?.email}}</h3>
+      <p> material : {{employe?.materialAssigned[0].ref}}</p>
+    </ion-label>
+     <ion-icon  slot="end" name="ellipsis-vertical"></ion-icon>
+  </ion-item>
+</ion-list>
     <ion-tabs>
       <ion-tab-bar slot="bottom">
         <ion-tab-button tab="home"> 
           <ion-icon name="home"></ion-icon>
-          <ion-label>Accueil</ion-label>
+          <ion-label>Home</ion-label>
           <ion-badge>6</ion-badge>
         </ion-tab-button>
     <ion-tab-button tab="people">
           <ion-icon name="people"></ion-icon>
-          <ion-label>Employés</ion-label>
+          <ion-label>Employees</ion-label>
         </ion-tab-button>
         <ion-tab-button tab="speakers">
           <ion-icon name="person-circle"></ion-icon>
